--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand test --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +44,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "jest": "^26.6.0",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.5"
   }
 }
